force-app/main/default/objects/SFDC_Employee__c/fields/Active_Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Active_Salesforce_User__c</fullName>
    <formula>SF_User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Salesforce User</label>
    <type>Checkbox</type>
</CustomField>