force-app/main/default/objects/SFDC_Employee__c/fields/Additional_Education__c.field-meta.xml
<CustomField>
    <fullName>Additional_Education__c</fullName>
    <label>Additional Education</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>