force-app/main/default/objects/SFDC_Employee__c/fields/Bonus_Potential__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Potential__c</fullName>
    <formula>Salary__c  *  0.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus (Potential)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>