force-app/main/default/objects/SFDC_Employee__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>60</length>
    <type>Text</type>
</CustomField>