force-app/main/default/objects/SFDC_Employee__c/fields/Cause_for_Termination__c.field-meta.xml
<CustomField>
    <fullName>Cause_for_Termination__c</fullName>
    <label>Cause for Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Productivity Issues</fullName>
            </value>
            <value>
                <fullName>Budget Cuts / Downsizing</fullName>
            </value>
            <value>
                <fullName>Gross Misconduct</fullName>
            </value>
            <value>
                <fullName>Too Much Absence</fullName>
            </value>
            <value>
                <fullName>Job Abandonment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>