force-app/main/default/objects/SFDC_Employee__c/fields/Counties__c.field-meta.xml
<CustomField>
    <fullName>Counties__c</fullName>
    <inlineHelpText>Only for Lecturers: Populate this field with information about which counties the User is available to host lectures.</inlineHelpText>
    <label>Counties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Market_Tnit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>County</valueSetName>
    </valueSet>
</CustomField>