force-app/main/default/objects/SFDC_Employee__c/fields/Days_Arrived_Late_in_2024__c.field-meta.xml
<CustomField>
    <fullName>Days_Arrived_Late_in_2024__c</fullName>
    <label>Days Arrived Late in 2024</label>
    <summarizedField>Time_Sheet__c.Number_of_Days_Arrived_Late__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Sheet__c.Month_Year__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2024</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Time_Sheet__c.Month_Year__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2024</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Sheet__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>