force-app/main/default/objects/SFDC_Employee__c/fields/Default_Work_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Default_Work_Hours_Per_Day__c</fullName>
    <label>Default Work Hours Per Day</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>