force-app/main/default/objects/SFDC_Employee__c/fields/Dental_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Dental_Benefits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dental Benefits</label>
    <type>Checkbox</type>
</CustomField>