force-app/main/default/objects/SFDC_Employee__c/fields/EMERGENCY_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>EMERGENCY_CONTACT__c</fullName>
    <label>EMERGENCY CONTACT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>