force-app/main/default/objects/SFDC_Employee__c/fields/EMP_ID__c.field-meta.xml
<CustomField>
    <fullName>EMP_ID__c</fullName>
    <label>EMP ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>