force-app/main/default/objects/SFDC_Employee__c/fields/Field_Location__c.field-meta.xml
<CustomField>
    <fullName>Field_Location__c</fullName>
    <label>Field Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>