force-app/main/default/objects/SFDC_Employee__c/fields/Former_Employer_1__c.field-meta.xml
<CustomField>
    <fullName>Former_Employer_1__c</fullName>
    <label>Former Employer 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>