force-app/main/default/objects/SFDC_Employee__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group #</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>