force-app/main/default/objects/SFDC_Employee__c/fields/Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Address__c</fullName>
    <label>Home Address</label>
    <type>TextArea</type>
</CustomField>