force-app/main/default/objects/SFDC_Employee__c/fields/Is_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Is_Birthday__c</fullName>
    <formula>AND(
  NOT(ISBLANK( Birthday__c )),
  DAY( Birthday__c ) = DAY(TODAY()),
  MONTH( Birthday__c ) = MONTH(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Birthday</label>
    <type>Checkbox</type>
</CustomField>