force-app/main/default/objects/SFDC_Employee__c/fields/Is_Employee_Myself__c.field-meta.xml
<CustomField>
    <fullName>Is_Employee_Myself__c</fullName>
    <formula>IF(  SF_User__r.Id = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Employee Myself</label>
    <type>Checkbox</type>
</CustomField>