force-app/main/default/objects/SFDC_Employee__c/fields/Is_Lecturer__c.field-meta.xml
<CustomField>
    <fullName>Is_Lecturer__c</fullName>
    <formula>SF_User__r.IsLecturer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lecturer</label>
    <type>Checkbox</type>
</CustomField>