force-app/main/default/objects/SFDC_Employee__c/fields/Is_My_Employee__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Employee__c</fullName>
    <description>This field is checked only if the user looking at it, is the one noted in either the &quot;Supervisor&quot; or the &quot;Manager&quot; field</description>
    <formula>IF(OR(Supervisor__c = $User.Id, Manager__c = $User.Id), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is checked only if the user looking at it, is the one noted in either the &quot;Supervisor&quot; or the &quot;Manager&quot; field</inlineHelpText>
    <label>Is My Employee</label>
    <type>Checkbox</type>
</CustomField>