force-app/main/default/objects/SFDC_Employee__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copenhagen (Headquarters)</fullName>
            </value>
            <value>
                <fullName>Malmö</fullName>
            </value>
            <value>
                <fullName>Malaga</fullName>
            </value>
            <value>
                <fullName>Dublin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>