force-app/main/default/objects/SFDC_Employee__c/fields/Med_Type__c.field-meta.xml
<CustomField>
    <fullName>Med_Type__c</fullName>
    <label>Med Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>