force-app/main/default/objects/SFDC_Employee__c/fields/Medical_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Medical_Benefits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Benefits</label>
    <type>Checkbox</type>
</CustomField>