force-app/main/default/objects/SFDC_Employee__c/fields/Meeting_Value__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Value__c</fullName>
    <inlineHelpText>This field is automatically calculated at certain intervals.</inlineHelpText>
    <label>Average Meeting Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>