force-app/main/default/objects/SFDC_Employee__c/fields/Number_of_Related_Time_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Related_Time_Sheets__c</fullName>
    <label>Number of Related Time Sheets</label>
    <summaryForeignKey>Time_Sheet__c.Employee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>