force-app/main/default/objects/SFDC_Employee__c/fields/Overdue_Time_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Time_Sheets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overdue Time Sheets</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>