force-app/main/default/objects/SFDC_Employee__c/fields/Public_Holiday_Country__c.field-meta.xml
<CustomField>
    <fullName>Public_Holiday_Country__c</fullName>
    <label>Public Holiday Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>