force-app/main/default/objects/SFDC_Employee__c/fields/Reason_for_Employment_End__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Employment_End__c</fullName>
    <label>Reason for Employment End</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resigned</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>