force-app/main/default/objects/SFDC_Employee__c/fields/Relation_to_Employee__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Employee__c</fullName>
    <formula>IF(
    Manager__c = $User.Id,
    &quot;Manager&quot;,
    IF(
        Supervisor__c = $User.Id,
        &quot;Supervisor&quot;,
        IF(
            SF_User__c = $User.Id,
            &quot;Me&quot;,
            &quot;None&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation to Employee</label>
    <type>Text</type>
</CustomField>