force-app/main/default/objects/SFDC_Employee__c/fields/Required_to_Approve_Time_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Required_to_Approve_Time_Sheets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required to Approve Time Sheets</label>
    <type>Checkbox</type>
</CustomField>