force-app/main/default/objects/SFDC_Employee__c/fields/Section_Sup__c.field-meta.xml
<CustomField>
    <fullName>Section_Sup__c</fullName>
    <label>Section Sup</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>