force-app/main/default/objects/SFDC_Employee__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airtable</fullName>
            </value>
            <value>
                <fullName>Billwerk (Reepay)</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>Docfabricator</fullName>
            </value>
            <value>
                <fullName>E-conomic</fullName>
            </value>
            <value>
                <fullName>GetAccept</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Google Chat</fullName>
            </value>
            <value>
                <fullName>Google Drive</fullName>
            </value>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>Klarna</fullName>
            </value>
            <value>
                <fullName>Microsoft 365 Email</fullName>
            </value>
            <value>
                <fullName>Plecto</fullName>
            </value>
            <value>
                <fullName>Relatel</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Scribe</fullName>
            </value>
            <value>
                <fullName>Sendgrid</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Sprout</fullName>
            </value>
            <value>
                <fullName>Telegenta Direct Number</fullName>
            </value>
            <value>
                <fullName>Twilio (Admin Console)</fullName>
            </value>
            <value>
                <fullName>Twilio for Salesforce</fullName>
            </value>
            <value>
                <fullName>Whereby</fullName>
            </value>
            <value>
                <fullName>Wordpress</fullName>
            </value>
            <value>
                <fullName>Zendesk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>