force-app/main/default/objects/SFDC_Employee__c/fields/Stock_Value_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Stock_Value_Day_1__c</fullName>
    <label>Stock Value (Day 1)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>