force-app/main/default/objects/SFDC_Employee__c/fields/Template_Employee__c.field-meta.xml
<CustomField>
    <fullName>Template_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Employee</label>
    <type>Checkbox</type>
</CustomField>