force-app/main/default/objects/SFDC_Employee__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>70</length>
    <type>Text</type>
</CustomField>