force-app/main/default/objects/SFDC_Employee__c/fields/Total_Monthly_License_Cost_in_DKK__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_License_Cost_in_DKK__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Monthly License Cost in DKK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>