force-app/main/default/objects/SFDC_Employee__c/fields/Total_Stock_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Stock_Value__c</fullName>
    <formula>Stock_Value_Day_1__c   *   Stock_Options__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Stock Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>