force-app/main/default/objects/SFDC_Employee__c/fields/X1st_of_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>X1st_of_Current_Month__c</fullName>
    <formula>DATE(YEAR(TODAY()), MONTH(TODAY()), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st of Current Month</label>
    <type>Date</type>
</CustomField>