force-app/main/default/objects/SFDC_Employee__c/fields/X401K__c.field-meta.xml
<CustomField>
    <fullName>X401K__c</fullName>
    <defaultValue>false</defaultValue>
    <label>401K</label>
    <type>Checkbox</type>
</CustomField>